--- a/settings/index.html
+++ b/settings/index.html
@@ -2,53 +2,61 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paramètres — Vibe Meter</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="./style.css" />
-  <script src="https://unpkg.com/@streamerbot/client/dist/streamerbot-client.umd.js"></script>
+
+  <link rel="stylesheet" href="./style.css"/>
+
+  <!-- Streamer.bot client (ES build) via CDN absolu -->
+  <script src="https://unpkg.com/@streamerbot/client@1.12.2/dist/streamerbot-client.js"
+          crossorigin="anonymous"
+          onerror="var s=document.createElement('script');s.src='https://cdn.jsdelivr.net/npm/@streamerbot/client@1.12.2/dist/streamerbot-client.js';document.head.appendChild(s);">
+  </script>
 </head>
 <body>
-  <!-- Bandeau du haut -->
+  <!-- Header -->
   <div id="header">
+    <img src="../resources/logo.png" style="height: 40px;" />
     <button id="membershipsButton" onclick="OpenMembershipPage()">Widgets exclusifs</button>
 
-    <div id="widgetUrlInputWrapper">
+    <div id="widgetUrlInputWrapper" style="flex: 1; position: relative;">
       <span id="urlLabel">Cliquer pour copier l’URL</span>
-      <input id="widgetUrlInput" type="text" readonly onclick="CopyURLToClipboard()" />
+      <input id="widgetUrlInput" type="text" readonly onclick="CopyURLToClipboard()"/>
     </div>
 
-    <button onclick="OpenLoadDefaultsPopup()">Par défaut</button>
-    <button onclick="OpenLoadSettingsPopup()">Charger une URL</button>
+    <button id="loadDefaultsButton" onclick="OpenLoadDefaultsPopup()">Par défaut</button>
+    <button id="loadSettingsButton" onclick="OpenLoadSettingsPopup()">Charger une URL</button>
   </div>
 
-  <!-- Contenu principal -->
+  <!-- Content -->
   <div id="contentArea">
     <div id="settingsPanel"></div>
 
     <div id="widget-preview-wrapper">
-      <label id="unmute-label">Cliquez dans l’aperçu pour activer le son…</label>
+      <label id="unmute-label">Cliquer pour unmute…</label>
       <iframe id="widgetPreview"></iframe>
     </div>
   </div>
 
-  <!-- Popups -->
+  <!-- Popup: Charger URL -->
   <div id="loadSettingsWrapper">
     <div id="loadSettingsContainer">
-      <label>Collez une URL de widget existant :</label>
-      <input id="loadUrlBox" type="text" />
-      <div style="display:flex;gap:20px;margin-top:10px;">
-        <button onclick="CloseSettings()">Annuler</button>
-        <button style="background-color:var(--accent-color)" onclick="LoadSettings()">Charger</button>
+      <label style="font-size: .8em;">Collez ici votre URL</label>
+      <input id="loadUrlBox" type="text" style="width: 100%;"/>
+      <div style="display:flex; gap:20px; margin-top:10px;">
+        <button id="cancelSettingsButton" onclick="CloseSettings()">Annuler</button>
+        <button style="background-color: var(--accent-color);" onclick="LoadSettings()">Charger</button>
       </div>
     </div>
   </div>
 
+  <!-- Popup: Valeurs par défaut -->
   <div id="loadDefaultsWrapper">
     <div id="loadDefaultsContainer">
-      <label>Réinitialiser aux valeurs par défaut ?</label>
-      <div style="display:flex;gap:20px;margin-top:10px;">
-        <button onclick="CloseDefaultsPopup()">Non</button>
-        <button style="background-color:var(--accent-color)" onclick="LoadDefaultSettings()">Oui</button>
+      <label style="font-size: .8em;">Êtes-vous sûr ?</label>
+      <div style="display:flex; gap:20px; margin-top:10px;">
+        <button id="cancelDefaultsButton" onclick="CloseDefaultsPopup()">Non</button>
+        <button style="background-color: var(--accent-color);" onclick="LoadDefaultSettings()">Oui</button>
       </div>
     </div>
   </div>
