--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Vibe Meter — Overlay (sans médias)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Vibe Meter</title>
+  <link rel="shortcut icon" href="#" />
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/metropolis.min.css" />
-  <!-- Client Streamer.bot -->
-  <script src="https://unpkg.com/@streamerbot/client/dist/streamerbot-client.umd.js"></script>
+
+  <!-- Streamer.bot client (ES build) avant ton script -->
+  <script src="https://unpkg.com/@streamerbot/client@1.12.2/dist/streamerbot-client.js"
+          crossorigin="anonymous"
+          onerror="var s=document.createElement('script');s.src='https://cdn.jsdelivr.net/npm/@streamerbot/client@1.12.2/dist/streamerbot-client.js';document.head.appendChild(s);">
+  </script>
 </head>
+
 <body>
   <div id="statusContainer">Connexion…</div>
   <div id="mainContainer">
@@ -22,6 +27,7 @@
       </div>
     </div>
   </div>
+
   <script src="./script.js"></script>
 </body>
 </html>
