--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-
+<html lang="fr">
 <head>
 	<title>Vibe Meter</title>
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="#" />
-	<link rel="stylesheet" href="./style.css" />
+	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/metropolis.min.css" />
 	<script type="text/javascript" src="https://unpkg.com/@streamerbot/client/dist/streamerbot-client.js"></script>
 </head>
-
 <body>
-	<div id="statusContainer">Connecting...</div>
+	<div id="statusContainer">Connexion...</div>
 	<div id="mainContainer">
 		<div id="ratingBoxWrapper">
-			<div id="ratingBoxBackground">
-			</div>
+			<div id="ratingBoxBackground"></div>
 			<div id="ratingBox">
 				<label id="ratingLabel">0</label>
 				<video id="ratingVideo" autoplay type="video/mp4"></video>
@@ -24,7 +22,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="helpers.js"></script>
+	<script src="script.js"></script>
 </body>
-
-<script src="../.common/utils/helpers.js"></script>
-<script src="./script.js"></script>
+</html>
